--- a/Wisnuc-iOS-Swift/Modules/Files/View/DrawerView/TableViewCel/FilesOfflineTableViewCell.xib
+++ b/Wisnuc-iOS-Swift/Modules/Files/View/DrawerView/TableViewCel/FilesOfflineTableViewCell.xib
@@ -12,34 +12,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="64" id="KGk-i7-Jjw" customClass="FilesOfflineTableViewCell" customModule="Wisnuc_iOS_Swift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="58" id="KGk-i7-Jjw" customClass="FilesOfflineTableViewCell" customModule="Wisnuc_iOS_Swift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="69.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="63.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UZX-Ik-QzR">
-                        <rect key="frame" x="16" y="22" width="24" height="24"/>
+                        <rect key="frame" x="16" y="20" width="24" height="24"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="24" id="1Hi-E6-i7w"/>
                             <constraint firstAttribute="height" constant="24" id="O7R-fb-HhV"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ptu-fa-g62">
-                        <rect key="frame" x="72" y="15" width="36" height="17"/>
+                        <rect key="frame" x="72" y="12" width="36" height="17"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.86959546232876717" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JOi-I8-nF4">
-                        <rect key="frame" x="92" y="39.5" width="31" height="15"/>
+                        <rect key="frame" x="92" y="36.5" width="31" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="files_offline_file_small.png" translatesAutoresizingMaskIntoConstraints="NO" id="TpI-zX-wZu">
-                        <rect key="frame" x="72" y="41" width="12" height="12"/>
+                        <rect key="frame" x="72" y="38" width="12" height="12"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="12" id="Dym-jG-oYZ"/>
                             <constraint firstAttribute="width" constant="12" id="war-nN-vhI"/>
@@ -50,21 +50,22 @@
                     <constraint firstItem="JOi-I8-nF4" firstAttribute="centerY" secondItem="TpI-zX-wZu" secondAttribute="centerY" id="E2l-tE-IRm"/>
                     <constraint firstItem="UZX-Ik-QzR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="EYh-ct-XiI"/>
                     <constraint firstItem="Ptu-fa-g62" firstAttribute="leading" secondItem="UZX-Ik-QzR" secondAttribute="trailing" constant="32" id="HFc-7K-aXc"/>
-                    <constraint firstItem="Ptu-fa-g62" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Lbh-ax-Omj"/>
+                    <constraint firstItem="Ptu-fa-g62" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Lbh-ax-Omj"/>
                     <constraint firstItem="UZX-Ik-QzR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="boe-kp-KQq"/>
                     <constraint firstItem="TpI-zX-wZu" firstAttribute="leading" secondItem="UZX-Ik-QzR" secondAttribute="trailing" constant="32" id="lj3-Ts-jQ7"/>
-                    <constraint firstAttribute="bottom" secondItem="JOi-I8-nF4" secondAttribute="bottom" constant="15" id="q6R-ZY-MPz"/>
+                    <constraint firstAttribute="bottom" secondItem="JOi-I8-nF4" secondAttribute="bottom" constant="12" id="q6R-ZY-MPz"/>
                     <constraint firstItem="JOi-I8-nF4" firstAttribute="leading" secondItem="TpI-zX-wZu" secondAttribute="trailing" constant="8" id="r1M-s1-cJk"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <inset key="separatorInset" minX="72" minY="0.0" maxX="0.0" maxY="0.0"/>
             <connections>
                 <outlet property="detailImageView" destination="TpI-zX-wZu" id="poL-or-E5g"/>
                 <outlet property="detailLabel" destination="JOi-I8-nF4" id="ifc-dX-Qyf"/>
                 <outlet property="leftImageView" destination="UZX-Ik-QzR" id="lNi-5t-GP8"/>
                 <outlet property="titleLabel" destination="Ptu-fa-g62" id="wHO-ef-qEv"/>
             </connections>
-            <point key="canvasLocation" x="34" y="67"/>
+            <point key="canvasLocation" x="34" y="64"/>
         </tableViewCell>
     </objects>
     <resources>
